<resources>
    <string name="app_name">OptimusTrash</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="bins">Bins</string>
    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="isConfirmed">Is Confirmed</string>
    <string name="id">ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="current_weight">Current Weight</string>
    <string name="maximum_weight">Maximum Weight</string>
    <string name="fullness">Fullness</string>
    <string name="weight_metering">Weight Metering</string>
    <string name="show_token">Show Token</string>
    <string name="token_placeholder"><![CDATA[<token placeholder>]]></string>
    <string name="bin_page">Bin Page</string>
    <string name="add_new_bin">Add New Bin</string>
    <string name="get_current_coordinates_from_device">Get current coordinates from device</string>
    <string name="add_the_bin">Add the bin</string>
</resources>
