<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
            android:padding="10dip"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/bin_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/id"/>
        <TextView
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/longitude"/>
        <TextView
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/latitude"/>
        <TextView
                android:id="@+id/current_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/current_weight"/>
        <TextView
                android:id="@+id/max_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/maximum_weight"/>
        <TextView
                android:id="@+id/fullness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/fullness"/>
        <TextView
                android:id="@+id/error_msg"
                android:layout_width="match_parent"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/show_token_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/show_token"
                android:textAlignment="center"/>
        <TextView
                android:id="@+id/token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:text="@string/token_placeholder"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/weight_metering"/>
    </LinearLayout>
</FrameLayout>