<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
            android:padding="10dip"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/username"/>

        <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/email"/>

        <TextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/firstName"/>

        <TextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/lastName"/>

        <TextView
                android:id="@+id/is_confirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/isConfirmed"/>

        <TextView
                android:id="@+id/error_msg"
                android:layout_width="match_parent"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/bins"
                android:textAlignment="center"/>
    </LinearLayout>
</FrameLayout>