<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <LinearLayout
            android:padding="10dip"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/username"/>

        <EditText
                android:inputType="text"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/password"/>

        <EditText
                android:inputType="textWebPassword"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"/>

        <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/login"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/login_err_msg"
                android:layout_width="match_parent"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>